# basic-dataplatform

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-api.yml  build.yml
app/: main.py
data_examples/: init.sql
frontend/: package-lock.json  package.json
frontend/data-platform-spa/: Dockerfile  README.md  package-lock.json  package.json
platform-api/: Dockerfile  pom.xml
platform-api/src/main/java/com/ikarabulut/platformapi/: PlatformApiApplication.java
platform-api/src/main/java/com/ikarabulut/platformapi/common/: ResourceNotFoundException.java
platform-api/src/main/java/com/ikarabulut/platformapi/controllers/: CatalogController.java
platform-api/src/main/java/com/ikarabulut/platformapi/error/: CatalogControllerExceptionHandler.java  ErrorMessage.java
platform-api/src/main/java/com/ikarabulut/platformapi/models/: CatalogDetails.java
platform-api/src/main/java/com/ikarabulut/platformapi/repository/: CatalogRepository.java
platform-api/src/main/resources/: application-local.properties  application.properties
platform-api/src/test/java/com/ikarabulut/platformapi/: PlatformApiApplicationTests.java
platform-frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
platform-frontend/src/: App.jsx
platypus-frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
platypus-frontend/src/app/: layout.tsx  page.tsx  providers.tsx
platypus-frontend/src/app/client/: PlatformApiClient.ts
platypus-frontend/src/types/: DataProduct.ts
tests/: test_smoketest.py
(+4 files in other folders)
